service/validation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validation
  labels:
    app: validation
spec:
  ports:
    - port: 3000
      name: rest
  selector:
    app: validation
