service/validation/k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: validation
spec:
  gateways:
  - ichsan-setiawan-gateway-api
  hosts:
  - "*.xip.io"
  http:
  - match:
    - uri:
        prefix: /validate
    route:
    - destination:
        host: validation
        port:
          number: 3000
